--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -58,7 +58,8 @@
     <Analyzer Include="C:\Program Files\Microsoft Visual Studio\2022\Community\Common7\IDE\Extensions\Microsoft\Visual Studio Tools for Unity\Analyzers\Microsoft.Unity.Analyzers.dll" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\player.cs" />
+    <Compile Include="Assets\Script\PlayerFor3D.cs" />
+    <Compile Include="Assets\Script\PlayerFor2D.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="UnityEngine">
