--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -60,9 +60,10 @@
   <ItemGroup>
     <Compile Include="Assets\Script\SceneManger.cs" />
     <Compile Include="Assets\Script\PlayerFor3D.cs" />
-    <Compile Include="Assets\Script\UIButtonHandleRoom.cs" />
+    <Compile Include="Assets\Script\UI\UIButtonHandleRoom.cs" />
     <Compile Include="Assets\Script\PlayerFor2D.cs" />
     <Compile Include="Assets\Script\GameManger.cs" />
+    <Compile Include="Assets\Script\UI\UIButtonHandleForLogic.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
